[build-system]
build-backend = "setuptools.build_meta"
requires = ["Django"]

[project.urls]
Homepage = "https://github.com/Shivahir2003/get_user_data"
 
[project]
name = "DataList"
version = "0.0.1"
description = "get details of requested user"
readme = "README.md"
authors = [{ name = "shiv, Ilearn", 
email = "shivahir0114@gmail.com" }]
license = { file = "LICENSE" }
 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["Annotation", 
     "Automated Annotation", 
     "OpenCV Annotate",
     "Image Annotation Tool",]
 
dependencies = [ "Django", "python", ]
 
requires-python = ">=3.5"